Read data from many features when reading NWM ensembles
Refs #65216